# actix-web-social-network

./: .env  Cargo.toml  diesel.toml  dump.rdb
migrations/2022-04-08-060631_users/: up.sql
migrations/2022-04-10-124313_other/: up.sql
migrations/2022-04-10-165529_other/: up.sql
migrations/2022-04-10-165600_users/: up.sql
migrations/2022-04-13-110616_other/: up.sql
migrations/2022-04-13-110631_users/: up.sql
migrations/2022-04-13-110650_communities/: up.sql
migrations/2022-04-13-142101_other/: up.sql
migrations/2022-04-13-142118_users/: up.sql
migrations/2022-04-13-142135_communities/: up.sql
migrations/2022-04-13-142200_posts/: up.sql
migrations/2022-04-13-142227_chats/: up.sql
migrations/2022-04-13-142243_photos/: up.sql
migrations/2022-04-13-142300_survey/: up.sql
migrations/2022-04-13-142835_edit1/: up.sql
migrations/2022-04-13-143549_video/: up.sql
migrations/2022-04-13-143619_docs/: up.sql
migrations/2022-04-13-144242_edit1/: up.sql
migrations/2022-04-13-144904_follows/: up.sql
migrations/2022-04-13-145303_friends/: up.sql
migrations/2022-04-14-171705_users/: up.sql
migrations/2022-04-14-171731_communities/: up.sql
migrations/2022-04-14-171749_posts/: up.sql
migrations/2022-04-14-171809_chats/: up.sql
migrations/2022-04-14-171837_photos/: up.sql
migrations/2022-04-14-171859_survey/: up.sql
migrations/2022-04-14-171915_video/: up.sql
src/: errors.rs  main.rs  routes.rs  schema.rs  vars.rs
src/models/: chats.rs  (+18 more)
templates/: base.html  base_anon.html  base_anon_mobile.html  base_mobile.html  base_scripts.html
(+1151 files in other folders)
