
[package]
name = "network"
version = "1.0.1"
edition = "2021"


[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-redis = { version = "0.8.0", features = ["web"] }
actix-session = "0.3"
djangohashers = { version = "1.5.7", default-features = false, features = ["with_pbkdf2"] }
#lettre = { git = "https://github.com/lettre/lettre" }
native-tls = "0.2.4"
env_logger = "0.9.0"
log = "0.4"
tera = "1.5.0"
serde = "1.0"
serde_json = "*"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }

actix-multipart = "0.4.0-beta.12"
futures = "0.3.21"
actix-form-data = "0.6.2"

mime = "0.3.16"
failure = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
actix-identity = "*"
actix-cors = "*"
actix-service = "*"
lazy_static = "*"
validator = "*"
validator_derive = "*"

bytes = { version = "1.1", features = ["serde"] }
rand = "0.8.5"
regex = "1.5.4"
actix-rt = "2"
actix-web-httpauth = "0.6.0"
reqwest = "*"
